# zero2prod

./: Cargo.toml  rustfmt.toml
.github/workflows/: rust.yml
configs/: config.yaml
scripts/: init_db.sh
src/: config.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
