[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["1ambd4 <dr.chen@mail.ustc.edu.cn>"]

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[lib]
path = "src/libs.rs"

[dependencies]
actix-web = "4.9.0"
config = "0.14.0"
serde = { version = "1.0.208", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }

# Using table-like toml syntax to avoid a super-long line.
[dependencies.sqlx]
version = "0.8.0"
default-featuers = false
features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid"
]

[dev-dependencies]
actix-rt = "2.10.0"
reqwest = "0.12.5"
tokio = "1.39.2"
